Remove absolute position on gift items

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -169,32 +169,37 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
         Give the gift of a limitless life
     </h2>
     <div class="gift-card-intro">
+        <div class="sect-subtitle pink-text mb-2">
+            Gift vouchers just got mighty meaningful!
+        </div>
         <p class="normal-text">
-            Vexillologist aesthetic beard health goth jean shorts XOXO mustache sartorial everyday carry church-key celiac. Leggings irony VHS skateboard
-            , meh photo booth snackwave austin affogato helvetica hashtag. Cray VHS hammock pug kickstarter adaptogen. Street art raw denim poutine adaptogen freegan.
-            Vexillologist aesthetic beard health goth jean shorts XOXO mustache sartorial everyday carry church-key celiac. Leggings irony VHS skateboard,
+            In collaboration with our friends at Flow and Fancy you can give an empowering gift that will last a lifetime.
+            <br><br>
+            Unsure which set to choose? Try selecting by crystal, affirmation or price.        
         </p>
     </div>
     <hr class="half-width-hr">
     <div class="gift-card-content">
         <div class="gift-card-item">
             <div class="gift-card-img">
-                <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+                <img src="static/img/Mhairi_pics/IMG-4643.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
-                <div class="gift-card-text-content">
+                <div class="gift-card-item-title">
                     <h4 class="sect-subtitle normal-text">
                         I am Resilient
                     </h4>
+                </div>
+                <div class="gift-card-item-info">
                     <p class="normal-text">
-                        £50 coaching gift voucher 
+                        £50 Coaching Gift Voucher 
                     </p>
                     <p class="normal-text">
-                        Obsidian card necklace
+                        Obsidian Cord Necklace
                     </p>
-                    <div class="gift-card-btn about-cta-btn">
-                        <a href="gift-cards/swift-gift-card" class="btn-pink normal-text">Purchase</a>
-                    </div>
+                </div>
+                <div class="gift-card-btn about-cta-btn">
+                    <a href="gift-cards/swift-gift-card" class="btn-pink normal-text">Purchase</a>
                 </div>
             </div>
         </div>
@@ -204,19 +209,21 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
-                <div class="gift-card-text-content">
+                <div class="gift-card-item-title">
                     <h4 class="sect-subtitle normal-text">
-                        I am Resilient
+                        I Am Loved
                     </h4>
+                </div>
+                <div class="gift-card-item-info">
                     <p class="normal-text">
                         £100 coaching gift voucher 
                     </p>
                     <p class="normal-text">
                         Rose Quartz Silver necklace 
                     </p>
-                    <div class="gift-card-btn about-cta-btn">
-                        <a href="" class="btn-pink normal-text">Purchase</a>
-                    </div>
+                </div>
+                <div class="gift-card-btn about-cta-btn">
+                    <a href="" class="btn-pink normal-text">Purchase</a>
                 </div>
             </div>
         </div>
@@ -226,10 +233,12 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
-                <div class="gift-card-text-content">
+                <div class="gift-card-item-title">
                     <h4 class="sect-subtitle normal-text">
-                        I am Resilient
+                        I am limitless
                     </h4>
+                </div>
+                <div class="gift-card-item-info">
                     <p class="normal-text">
                         £155 coaching gift voucher 
                     </p>
@@ -237,9 +246,9 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                         Clear Quartz Gold Necklace 
                         and pendant of choice
                     </p>
-                    <div class="gift-card-btn about-cta-btn">
-                        <a href="" class="btn-pink normal-text">Purchase</a>
-                    </div>
+                </div>
+                <div class="gift-card-btn about-cta-btn">
+                    <a href="" class="btn-pink normal-text">Purchase</a>
                 </div>
             </div>
         </div>
