--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3980,13 +3980,14 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .gift-card-section {
     background: white;
+    padding: 2em 0 3em 0;
     height: 38em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .gift-card-section {
-    height: 36em;
+    height: 35em;
   }
 }
 
@@ -4029,12 +4030,17 @@ input[type='checkbox'] {
   }
 }
 
+.gift-card-intro .sect-subtitle {
+  margin-bottom: 1em;
+}
+
 @media only screen and (min-width: 768px) {
   .gift-card-content {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     width: 85vw;
+    height: 20em;
     margin: auto;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -4042,10 +4048,17 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gift-card-content {
+    height: 19em;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .gift-card-content {
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    height: 18.5em;
   }
 }
 
@@ -4061,20 +4074,21 @@ input[type='checkbox'] {
   width: 85vw;
   margin: 4em auto;
   position: relative;
-  height: 34.5em;
+  height: auto;
+  border: solid 1px #e0e0e0;
+  background-color: white;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .gift-card-item {
     width: 24em;
-    height: 33.5em;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .gift-card-item {
     width: 31%;
-    height: 12.5em;
+    height: 100%;
     margin: 0;
   }
 }
@@ -4101,19 +4115,21 @@ input[type='checkbox'] {
   width: 100%;
 }
 
+@media only screen and (min-width: 768px) {
+  .gift-card-img {
+    height: 10em;
+  }
+}
+
 .gift-card-img img {
   width: 100%;
+  height: 100%;
 }
 
 .gift-card-text {
   width: 90%;
   margin: auto;
   padding: 1.5em .5em;
-  border: solid 1px #e0e0e0;
-  position: absolute;
-  left: 0;
-  top: 20em;
-  right: 0;
   background: white;
 }
 
@@ -4125,14 +4141,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) {
   .gift-card-text {
-    top: 9em;
-    padding: 1em .5em;
-  }
-}
-
-@media only screen and (min-width: 1600px) {
-  .gift-card-text {
-    top: 12em;
+    padding: 1em .5em 0 .5em;
   }
 }
 
@@ -4140,8 +4149,20 @@ input[type='checkbox'] {
   margin-bottom: 0;
 }
 
-.gift-card-text .sect-subtitle {
-  margin-bottom: 1.5em;
+@media only screen and (min-width: 768px) {
+  .gift-card-text .sect-subtitle {
+    margin-bottom: 1em;
+  }
+}
+
+.gift-card-item-info {
+  margin: 1em auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .gift-card-item-info {
+    margin: .5em auto;
+  }
 }
 
 .gift-card-btn {
@@ -4151,8 +4172,12 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .gift-card-btn {
     padding: .2em 1em;
-    margin: 1em auto 0 auto !important;
+    margin: 0 auto 0 auto !important;
     width: 7em;
+    position: absolute;
+    bottom: 1em;
+    left: 0;
+    right: 0;
   }
 }
 
@@ -8111,13 +8136,14 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .gift-card-section {
     background: white;
+    padding: 2em 0 3em 0;
     height: 38em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .gift-card-section {
-    height: 36em;
+    height: 35em;
   }
 }
 
@@ -8160,12 +8186,17 @@ input[type='checkbox'] {
   }
 }
 
+.gift-card-intro .sect-subtitle {
+  margin-bottom: 1em;
+}
+
 @media only screen and (min-width: 768px) {
   .gift-card-content {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     width: 85vw;
+    height: 20em;
     margin: auto;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -8173,10 +8204,17 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gift-card-content {
+    height: 19em;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .gift-card-content {
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    height: 18.5em;
   }
 }
 
@@ -8192,20 +8230,21 @@ input[type='checkbox'] {
   width: 85vw;
   margin: 4em auto;
   position: relative;
-  height: 34.5em;
+  height: auto;
+  border: solid 1px #e0e0e0;
+  background-color: white;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .gift-card-item {
     width: 24em;
-    height: 33.5em;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .gift-card-item {
     width: 31%;
-    height: 12.5em;
+    height: 100%;
     margin: 0;
   }
 }
@@ -8232,19 +8271,21 @@ input[type='checkbox'] {
   width: 100%;
 }
 
+@media only screen and (min-width: 768px) {
+  .gift-card-img {
+    height: 10em;
+  }
+}
+
 .gift-card-img img {
   width: 100%;
+  height: 100%;
 }
 
 .gift-card-text {
   width: 90%;
   margin: auto;
   padding: 1.5em .5em;
-  border: solid 1px #e0e0e0;
-  position: absolute;
-  left: 0;
-  top: 20em;
-  right: 0;
   background: white;
 }
 
@@ -8256,14 +8297,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) {
   .gift-card-text {
-    top: 9em;
-    padding: 1em .5em;
-  }
-}
-
-@media only screen and (min-width: 1600px) {
-  .gift-card-text {
-    top: 12em;
+    padding: 1em .5em 0 .5em;
   }
 }
 
@@ -8271,8 +8305,20 @@ input[type='checkbox'] {
   margin-bottom: 0;
 }
 
-.gift-card-text .sect-subtitle {
-  margin-bottom: 1.5em;
+@media only screen and (min-width: 768px) {
+  .gift-card-text .sect-subtitle {
+    margin-bottom: 1em;
+  }
+}
+
+.gift-card-item-info {
+  margin: 1em auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .gift-card-item-info {
+    margin: .5em auto;
+  }
 }
 
 .gift-card-btn {
@@ -8282,8 +8328,12 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .gift-card-btn {
     padding: .2em 1em;
-    margin: 1em auto 0 auto !important;
+    margin: 0 auto 0 auto !important;
     width: 7em;
+    position: absolute;
+    bottom: 1em;
+    left: 0;
+    right: 0;
   }
 }
 
