Add coming soon images

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -4,6 +4,7 @@ layout: 'base.njk'
 
 ---
 
+<hr class="half-width-hr">
 <section>
     {# <h2 class="sect-title">
         Give the gift of a limitless life
@@ -72,5 +73,6 @@ layout: 'base.njk'
         </div>
     </div>
 </section>
+<hr class="half-width-hr">
 
 
