--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -206,7 +206,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
         <hr class="half-width-hr  d-md-none">
          <div class="gift-card-item">
             <div class="gift-card-img">
-                <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+                <img src="static/img/Mhairi_pics/pexels-boris-pavlikovsky-5499121.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-item-title">
@@ -222,15 +222,16 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                         Rose Quartz Silver necklace 
                     </p>
                 </div>
-                <div class="gift-card-btn about-cta-btn">
+                <hr class="half-width-hr">
+                <!-- <div class="gift-card-btn about-cta-btn">
                     <a href="" class="btn-pink normal-text">Purchase</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <hr class="half-width-hr  d-md-none">
          <div class="gift-card-item">
             <div class="gift-card-img">
-                <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+                <img src="static/img/Mhairi_pics/pexels-boris-pavlikovsky-5499121.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-item-title">
@@ -247,9 +248,10 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                         and pendant of choice
                     </p>
                 </div>
-                <div class="gift-card-btn about-cta-btn">
+                <hr class="half-width-hr">
+                <!-- <div class="gift-card-btn about-cta-btn">
                     <a href="" class="btn-pink normal-text">Purchase</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
