Increase margin on gift card intro

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -169,7 +169,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
         Give the gift of a limitless life
     </h2>
     <div class="gift-card-intro">
-        <div class="sect-subtitle pink-text mb-2">
+        <div class="sect-subtitle pink-text">
             Gift vouchers just got mighty meaningful!
         </div>
         <p class="normal-text">
