--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -61,12 +61,12 @@ layout: 'base.njk'
             </div>
             <div class="about-cta-btn gift-card-buy-btn">
                 <button class="btn-pink normal-text snipcart-add-item"
-                    data-item-id="Swift"
-                    data-item-price="1"
+                    data-item-id="#36"
+                    data-item-price="50"
                     data-item-url="https://mystifying-morse-754596.netlify.app/services"
-                    data-item-description="Swift Coaching Package"
-                    data-item-image=""
-                    data-item-name="Swift Coaching Package">
+                    data-item-description="£50 Coaching Gift Voucher and Envelop. Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box "
+                    data-item-image="/static/img/Mhairi_pics/voucher-front.jpg"
+                    data-item-name="Give the gift of a limitless life - I am Resilient">
                     Add to cart
                 </button>
             </div>
