--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -189,8 +189,12 @@
 
     <!-- snipcart API key -->
     <script async src="https://cdn.snipcart.com/themes/v3.0.26/default/snipcart.js"></script>
-    <div id="snipcart" data-api-key="Y2FiNmVmYzYtYmNlYi00MDVmLTliZTAtNjkwYmZmNGE4ZGI0NjM3NDI0MTM5NjIwOTMwODgz" data-currency="gbp" hidden></div>
-    <div id="snipcart" data-api-key="S_OWViMGRjMmUtMDUwZS00NDQ0LTg4ZTItNmU5OTljNDVlZDQ1NjM3NDI0MjEyNDAxMTI2NTQ3" data-currency="gbp" hidden></div>
+    <!-- live snipcart keys -->
+    {# <div id="snipcart" data-api-key="Y2FiNmVmYzYtYmNlYi00MDVmLTliZTAtNjkwYmZmNGE4ZGI0NjM3NDI0MTM5NjIwOTMwODgz" data-currency="gbp" hidden></div>
+    <div id="snipcart" data-api-key="S_OWViMGRjMmUtMDUwZS00NDQ0LTg4ZTItNmU5OTljNDVlZDQ1NjM3NDI0MjEyNDAxMTI2NTQ3" data-currency="gbp" hidden></div> #}
+
+    <!-- Test Snipcart keys -->
+    <div id="snipcart" data-api-key="NjJkNmNjYzEtYmQxZC00NjU3LTlmYzItOTk0NjBmMzE0NmU3NjM3NDI0MTM5NjIwOTMwODgz" data-currency="gbp" hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
