Chnage url of buy button

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -63,7 +63,7 @@ layout: 'base.njk'
                 <button class="btn-pink normal-text snipcart-add-item"
                     data-item-id="#36"
                     data-item-price="1"
-                    data-item-url="https://mystifying-morse-754596.netlify.app/services"
+                    data-item-url="https://mystifying-morse-754596.netlify.app/gift-cards/swift-gift-card"
                     data-item-description="£50 Coaching Gift Voucher and Envelop. Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box "
                     data-item-image="/static/img/Mhairi_pics/voucher-front.jpg"
                     data-item-name="Give the gift of a limitless life - I am Resilient">
