Add cart to nav
Add close toggle to cart nav item

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -61,6 +61,7 @@
                 <li class="nav-item rob-font"><a href="/services">Coaching Programs</a></li>
                 <li class="nav-item rob-font"><a href="/testimonials">Client Love</a></li>
                 <li class="nav-item rob-font"><a href="/contact">Let's Chat</a></li>
+                <li class="nav-item rob-font"><a class="snipcart-checkout">Cart</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item">
                         <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank">
