Add coming soon

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -195,7 +195,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                         £50 Coaching Gift Voucher 
                     </p>
                     <p class="normal-text">
-                        Obsidian Cord Necklace
+                        Obsidian Necklace
                     </p>
                 </div>
                 <div class="gift-card-btn about-cta-btn">
@@ -216,10 +216,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 </div>
                 <div class="gift-card-item-info">
                     <p class="normal-text">
-                        £100 coaching gift voucher 
-                    </p>
-                    <p class="normal-text">
-                        Rose Quartz Silver necklace 
+                        Coming Soon
                     </p>
                 </div>
                 <hr class="half-width-hr">
@@ -241,11 +238,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 </div>
                 <div class="gift-card-item-info">
                     <p class="normal-text">
-                        £155 coaching gift voucher 
-                    </p>
-                    <p class="normal-text">
-                        Clear Quartz Gold Necklace 
-                        and pendant of choice
+                        Coming Soon
                     </p>
                 </div>
                 <hr class="half-width-hr">
