Update price to actual

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -25,7 +25,7 @@ layout: 'base.njk'
                     Give the gift of a limitless life
                 </div>
                 <div class="sect-subtitle pink-text">
-                    I am resilient
+                    I am resilient - £50
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -62,7 +62,7 @@ layout: 'base.njk'
             <div class="about-cta-btn gift-card-buy-btn">
                 <button class="btn-pink normal-text snipcart-add-item"
                     data-item-id="#36"
-                    data-item-price="1"
+                    data-item-price="50"
                     data-item-url="https://mystifying-morse-754596.netlify.app/gift-cards/swift-gift-card"
                     data-item-description="£50 Coaching Gift Voucher and Envelop. Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box "
                     data-item-image="/static/img/Mhairi_pics/voucher-front.jpg"
