--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -199,7 +199,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                     </p>
                 </div>
                 <div class="gift-card-btn about-cta-btn">
-                    <a href="gift-cards/swift-gift-card" class="btn-pink normal-text">Purchase</a>
+                    <a href="gift-cards/swift-gift-card" class="btn-pink normal-text">More info</a>
                 </div>
             </div>
         </div>
