--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -44,16 +44,16 @@ layout: 'base.njk'
                 <div class="gift-card-info normal-text">
                     2020 has stretched us all. <br><br>
 
-                    ‘I am resilient’ package allows the recipient to redeem their £50 gift voucher against any coaching program of their choice. 
+                    The ‘I am resilient’ gift package allows the recipient to redeem their £50 gift voucher against any coaching program of their choice.  
                     <br><br>
-                    In addition they will unwrap this powerful Obsidian Crystal Necklace. Obsidian or the 'Truth Stone' offers clarity to the wearer, promotes adaptability and can help remove any blocks.  Wear it and repeat ‘ I am resilient'.
+                    In addition they will unwrap this powerful Obsidian Crystal Necklace. Obsidian or the 'Truth Stone' offers clarity to the wearer and promotes adaptability. Wear it and repeat ‘ I am resilient'.
                 </div>
                 <div class="gift-card-tc normal-text">
                     <p class="fw-b mb-0">
                         The details:
                     </p>
                     <ul class="gift-card-tc-list">
-                        <li>Gift Voucher valid until December 2021, for a one time redemption only.</li>
+                        <li>Gift Voucher valid until December 2021, for a one time redemption only. Voucher valid until December 2021, for a one time redemption only.</li>
                         <li>Necklace comes in gift box, wrapped in hand tie dyed fabric</li>
                         <li>To redeem voucher book free call through The Roadblock Coach website and quote voucher number</li>
                     </ul>
