Edit gift card copy misspelling

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -35,7 +35,7 @@ layout: 'base.njk'
                         Contains:
                     </p>
                     <ul>
-                        <li>£50 Coaching Gift Voucher and Envelop</li>
+                        <li>£50 Coaching Gift Voucher and Envelope</li>
                         <li>Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box</li>
                     </ul>
                 </div>
@@ -53,7 +53,7 @@ layout: 'base.njk'
                         The details:
                     </p>
                     <ul class="gift-card-tc-list">
-                        <li>Gift Voucher valid until December 2021, for a one time redemption only. Voucher valid until December 2021, for a one time redemption only.</li>
+                        <li>Gift Voucher valid until December 2021, for a one time redemption only.</li>
                         <li>Necklace comes in gift box, wrapped in hand tie dyed fabric</li>
                         <li>To redeem voucher book free call through The Roadblock Coach website and quote voucher number</li>
                     </ul>
