Add limitless package content

--- a/src/site/gift-cards/i-am-limitless.njk
+++ b/src/site/gift-cards/i-am-limitless.njk
@@ -13,9 +13,9 @@ layout: 'base.njk'
         <div id="primary-slider" class="gift-card-img-carousel splide">
             <div class="splide__track">
                 <ul class="splide__list">
-                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/voucher-front.jpg"></li>
-                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/voucher-back.jpg"></li>
-                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/flow-fancy-obsidian.jpg"></li>
+                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/limitless-voucher-front.jpg"></li>
+                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/limitless-voucher-back.jpg"></li>
+                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/flow-fancy-clear-quartz.jpg"></li>
                 </ul>
             </div>
         </div>
@@ -25,7 +25,7 @@ layout: 'base.njk'
                     Give the gift of a limitless life
                 </div>
                 <div class="sect-subtitle pink-text">
-                    I am resilient - £50
+                    I am limitless - £100
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -35,18 +35,19 @@ layout: 'base.njk'
                         Contains:
                     </p>
                     <ul>
-                        <li>£50 Coaching Gift Voucher and Envelope</li>
-                        <li>Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box</li>
+                        <li>£100 Coaching Gift Voucher and Envelope</li>
+                        <li>Flow & Fancy Clear Quartz on Silver Necklace in Gift Box</li>
                     </ul>
                 </div>
             </div>
             <div class="gift-card-details">
                 <div class="gift-card-info normal-text">
-                    2020 has stretched us all. <br><br>
+                    Clear your roadblocks and your energy. <br><br>
 
-                    The ‘I am resilient’ gift package allows the recipient to redeem their £50 gift voucher against any coaching program of their choice.  
+                    'I am limitless’ allows the recipient to break through their barriers with £100 gift voucher redeemable against a coaching package of their choice.  
                     <br><br>
-                    In addition they will unwrap this powerful Obsidian Crystal Necklace. Obsidian or the 'Truth Stone' offers clarity to the wearer and promotes adaptability. Wear it and repeat ‘ I am resilient'.
+                    In addition, this superior clear quartz crystal on a beautiful silver chain will align the chakras, clear the mind and amplify intention.
+                    Wear it and repeat, ‘I am limitless’
                 </div>
                 <div class="gift-card-tc normal-text">
                     <p class="fw-b mb-0">
@@ -54,19 +55,19 @@ layout: 'base.njk'
                     </p>
                     <ul class="gift-card-tc-list">
                         <li>Gift Voucher valid until December 2021, for a one time redemption only.</li>
-                        <li>Necklace comes in gift box, wrapped in hand tie dyed fabric</li>
+                        <li>Silver 18" necklace comes in gift box, wrapped in hand tie dyed fabric</li>
                         <li>To redeem voucher book free call through The Roadblock Coach website and quote voucher number</li>
                     </ul>
                 </div>
             </div>
             <div class="about-cta-btn gift-card-buy-btn">
                 <button class="btn-pink normal-text snipcart-add-item"
-                    data-item-id="#36"
-                    data-item-price="50"
-                    data-item-url="https://mystifying-morse-754596.netlify.app/gift-cards/swift-gift-card"
-                    data-item-description="£50 Coaching Gift Voucher and Envelop. Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box "
-                    data-item-image="/static/img/Mhairi_pics/voucher-front.jpg"
-                    data-item-name="Give the gift of a limitless life - I am Resilient">
+                    data-item-id="#38"
+                    data-item-price="100"
+                    data-item-url="https://mystifying-morse-754596.netlify.app/gift-cards/i-am-limitless"
+                    data-item-description="£100 Coaching Gift Voucher and Envelop. Flow & Fancy Clear Quartz on Silver Necklace in Gift Box"
+                    data-item-image="/static/img/Mhairi_pics/limitless-voucher-front.jpg"
+                    data-item-name="Give the gift of a limitless life - I Am Limitless">
                     Add to cart
                 </button>
             </div>
