--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -182,7 +182,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
     <div class="gift-card-content">
         <div class="gift-card-item">
             <div class="gift-card-img">
-                <img src="static/img/Mhairi_pics/voucher-front.jpg" alt="Temp-gift-card-1">
+                <img src="static/img/Mhairi_pics/resilient-voucher-front-2.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-item-title">
@@ -195,45 +195,47 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                         £50 Coaching Gift Voucher 
                     </p>
                     <p class="normal-text">
-                        Obsidian Necklace
+                         Flow & Fancy Clear Obsidian Necklace
                     </p>
                 </div>
                 <div class="gift-card-btn about-cta-btn">
-                    <a href="gift-cards/swift-gift-card" class="btn-pink normal-text">More info</a>
+                    <a href="gift-cards/i-am-resilient" class="btn-pink normal-text">More info</a>
                 </div>
             </div>
         </div>
         <hr class="half-width-hr  d-md-none">
          <div class="gift-card-item">
             <div class="gift-card-img">
-                <img src="static/img/Mhairi_pics/coming-soon-comp.jpg" alt="Temp-gift-card-1">
-            </div>
-            <div class="gift-card-text">
-                <div class="gift-card-item-title">
-                    <h4 class="sect-subtitle normal-text">
-                        I Am Loved
-                    </h4>
-                </div>
-                <div class="gift-card-item-info">
-                    <p class="normal-text">
-                        Coming Soon
-                    </p>
-                </div>
-                <hr class="half-width-hr">
-                <!-- <div class="gift-card-btn about-cta-btn">
-                    <a href="" class="btn-pink normal-text">Purchase</a>
-                </div> -->
-            </div>
-        </div>
-        <hr class="half-width-hr  d-md-none">
-         <div class="gift-card-item">
-            <div class="gift-card-img">
-                <img src="static/img/Mhairi_pics/coming-soon-comp.jpg" alt="Temp-gift-card-1">
+                <img src="static/img/Mhairi_pics/limitless-voucher-front-2.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-item-title">
                     <h4 class="sect-subtitle normal-text">
                         I am limitless
+                    </h4>
+                </div>
+                <div class="gift-card-item-info">
+                    <p class="normal-text">
+                        £100 Coaching Gift Voucher 
+                    </p>
+                    <p class="normal-text">
+                        Flow & Fancy Clear Quartz on a Silver Necklace
+                    </p>
+                </div>
+                <div class="gift-card-btn about-cta-btn">
+                    <a href="gift-cards/i-am-limitless" class="btn-pink normal-text">More info</a>
+                </div>
+            </div>
+        </div>
+        <hr class="half-width-hr  d-md-none">
+         <div class="gift-card-item">
+            <div class="gift-card-img">
+                <img src="static/img/Mhairi_pics/coming-soon-comp.jpg" alt="Temp-gift-card-1">
+            </div>
+            <div class="gift-card-text">
+                <div class="gift-card-item-title">
+                    <h4 class="sect-subtitle normal-text">
+                        I am Loved
                     </h4>
                 </div>
                 <div class="gift-card-item-info">
