--- a/src/site/gift-cards/i-am-limitless.njk
+++ b/src/site/gift-cards/i-am-limitless.njk
@@ -64,7 +64,7 @@ layout: 'base.njk'
                 <button class="btn-pink normal-text snipcart-add-item"
                     data-item-id="#38"
                     data-item-price="100"
-                    data-item-url="https://mystifying-morse-754596.netlify.app/gift-cards/i-am-limitless"
+                    data-item-url="/gift-cards/i-am-limitless"
                     data-item-description="£100 Coaching Gift Voucher and Envelop. Flow & Fancy Clear Quartz on Silver Necklace in Gift Box"
                     data-item-image="/static/img/Mhairi_pics/limitless-voucher-front.jpg"
                     data-item-name="Give the gift of a limitless life - I Am Limitless">
