--- a/src/site/gift-cards/i-am-resilient.njk
+++ b/src/site/gift-cards/i-am-resilient.njk
@@ -63,7 +63,7 @@ layout: 'base.njk'
                 <button class="btn-pink normal-text snipcart-add-item"
                     data-item-id="#36"
                     data-item-price="50"
-                    data-item-url="https://mystifying-morse-754596.netlify.app/gift-cards/i-am-resilient"
+                    data-item-url="/gift-cards/i-am-resilient"
                     data-item-description="£50 Coaching Gift Voucher and Envelop. Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box "
                     data-item-image="/static/img/Mhairi_pics/resilient-voucher-front.jpg"
                     data-item-name="Give the gift of a limitless life - I am Resilient">
