Add id to gift card section

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -164,7 +164,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
 <!-- END: you will gain section -->
 
 <!-- Gift card section -->
-<section class="gift-card-section">
+<section id="gift-card-section" class="gift-card-section">
     <h2 class="sect-title">
         Give the gift of a limitless life
     </h2>
