--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1703,6 +1703,10 @@ footer {
   }
 }
 
+.insta-gift-cards {
+  background: white !important;
+}
+
 .nav {
   -webkit-transition: right .8s ease;
   transition: right .8s ease;
