Add comment on gift card page

--- a/src/site/gift-cards.njk
+++ b/src/site/gift-cards.njk
@@ -5,6 +5,8 @@ title: 'The Roadblock Coach - Life Coaching by Mhairi Todd'
 metaDescription: 'Accredited Transformational Coach dedicated to helping you overcome roadblocks and move toward a happier, fulfilling life via online coaching sessions. DISC Certified.'
 ---
 
+<!-- gift page for linktree -->
+
 <hr class="half-width-hr">
 <!-- Gift card section -->
 <section id="gift-card-section" class="gift-card-section insta-gift-cards">
