Change to gifting just got

--- a/src/site/gift-cards.njk
+++ b/src/site/gift-cards.njk
@@ -15,7 +15,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
     </h2>
     <div class="gift-card-intro">
         <div class="sect-subtitle pink-text">
-            Gift vouchers just got mighty meaningful!
+            Gifting just got mighty meaningful!
         </div>
         <p class="normal-text">
             In collaboration with our friends at Flow and Fancy you can give an empowering gift that will last a lifetime.
