--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -40,7 +40,8 @@
   'pages/home',
   'pages/services',
   'pages/contact',
-  'pages/testimonials';
+  'pages/testimonials',
+  'pages/opening_ceremony';
 
 // 7. Themes
 @import
