Add ceremony what section

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -18,12 +18,44 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
 
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
-        <h2 class="services-intro-subtitle rob-font">
-            Ready for a breakthrough?
-        </h2>
-        <h3 class="services-intro-subtitle rob-font">
-            Hear from the women who have changed their lives
-        </h3>
+        <div class="home-sub-hero-content ceremony-sub-content">
+            <h1 class="sect-title about-title pink-text">RESTORE, RELEASE AND REVEAL</h1>
+            <h3 class="services-intro-subtitle rob-font">
+                Enter 2021 with a calm mind and a courageous heart.
+            </h3>   
+        </div>
+        <hr class="half-width-hr">
+        <div class="ceremony-what">
+            <div class="ceremony-what-item">
+                <h4 class="sect-subtitle pink-text fw-b">
+                    What
+                </h4>
+                <p class="normal-text">
+                    A 1hr lecture style workshop followed by a 30 min restorative Sound Bath.
+                    We will release what doesn’t serve you, call in what you need for 2021 and get clear on your next right move.
+                </p>
+            </div>
+            <div class="ceremony-what-item">
+                <h4 class="sect-subtitle pink-text fw-b">
+                    When
+                </h4>
+                <p class="normal-text">
+                    Tuesday 5th Jan
+                    8pm- 9.30pm GMT (replay available)
+                </p>
+            </div>
+            <div class="ceremony-what-item">
+                <h4 class="sect-subtitle pink-text fw-b">
+                    Where
+                </h4>
+                <p class="normal-text">
+                    Online via a unique weblink
+                </p>
+            </div>
+            <div class="about-cta-btn">
+                <a href="" class="btn-pink normal-text">Get your ticket</a>
+            </div>
+        </div>
     </section>    
     <!-- END: intro section -->
 
